objects/Initiatives_Object__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Initiative_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Initiatives Objects</relationshipLabel>
        <relationshipName>Initiatives_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiatives_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiatives Object</label>
        <referenceTo>Initiatives_Object__c</referenceTo>
        <relationshipLabel>Initiatives Objects</relationshipLabel>
        <relationshipName>Initiative_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiative</fullName>
                </value>
                <value>
                    <fullName>Goal</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Tactic</fullName>
                </value>
                <value>
                    <fullName>Requirement</fullName>
                </value>
                <value>
                    <fullName>Regulation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Initiatives Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiatives Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>